第二次提交

--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,13 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+.w {
+  width: 1000px;
+  margin: 0 auto;
+}
+.notallowUserCopy {
+  user-select: none;
+}
 ul {
   list-style: none;
 }
